feat: add signin route

--- a/apps/backend-go/package.json
+++ b/apps/backend-go/package.json
@@ -7,6 +7,9 @@
     "dev": "go run main.go",
     "build": "go build -o dist/server main.go"
   },
+  "dependencies": {
+    "@repo/db": "workspace:*"
+  },
   "keywords": [],
   "author": "Akdev Saha",
   "license": "MIT",
