--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,14 +19,17 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/node": "^20.19.9",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@workspace/eslint-config": "workspace:^",
     "@workspace/typescript-config": "workspace:*",
+    "axios": "^1.11.0",
     "typescript": "^5.9.2"
   }
 }
